<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017 Full Mead Alchemist, LLC.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string-array name="mass_units_list">
        <item>@string/KILOGRAM</item>
        <item>@string/GRAM</item>
        <item>@string/POUND</item>
        <item>@string/OUNCE</item>
    </string-array>
    <string-array name="volume_units_list">
        <item>@string/LITER</item>
        <item>@string/OUNCE_LIQUID_US</item>
        <item>@string/GALLON_LIQUID_US</item>
        <item>@string/GALLON_LIQUID_UK</item>
    </string-array>
    <string-array name="sugar_units_list">
        <item>@string/KILOGRAM</item>
        <item>@string/GRAM</item>
        <item>@string/LITER</item>
        <item>@string/GALLON_LIQUID_US</item>
        <item>@string/OUNCE_LIQUID_US</item>
        <item>@string/POUND</item>
    </string-array>
</resources>