<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.batch.form.BatchFormFragment">

    <data>

        <variable
            name="viewmodel"
            type="com.fullmeadalchemist.mustwatch.ui.common.MainViewModel" />

        <variable
            name="batch"
            type="com.fullmeadalchemist.mustwatch.vo.Batch" />
    </data>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/batchFormTitleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_batch_title"

                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_element_spacing">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Batch name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@{batch.name}" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="24dp"
                    android:layout_height="48dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="date created"
                    android:gravity="center"
                    android:tint="@color/colorFieldIcon"
                    app:srcCompat="@drawable/ic_access_time_black_24dp" />

                <TextView
                    android:id="@+id/createDateDate"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:ems="10"
                    android:gravity="start|center"
                    android:maxLines="1"
                    android:text="@{batch.createDate}"
                    android:textAlignment="textStart"
                    tools:text="Mar 31, 2017" />

                <TextView
                    android:id="@+id/createDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="end|center"
                    android:maxLines="1"
                    android:textAlignment="textEnd"
                    tools:text="7:44 AM" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ingredients_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="1"
                tools:listitem="@layout/ingredient_item" />


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="131dp">

                <Button
                    android:id="@+id/add_sugar_button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="Add Sugar"
                    android:text="Add Sugar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/add_yeast_button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="Add Yeast"
                    android:text="Add Yeast"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_sugar_button" />

                <Button
                    android:id="@+id/add_nutrient_button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:contentDescription="Add Nutrient"
                    android:text="Add Nutrient"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/add_stabilizer_button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:contentDescription="Add Stabilizer"
                    android:text="Add Stabilizer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_nutrient_button" />

            </android.support.constraint.ConstraintLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Status"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/outputVolumeAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Output Volume"
                        android:inputType="numberDecimal"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/outputVolumeAmountUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/volume_units_list" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/targetABV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Target ABV%"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:text="@{batch.targetABV}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/targetSgStarting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Target starting Specific Gravity (example: 1.115)"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:text="@{batch.targetSgStarting}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/targetSgFinal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Target final Specific Gravity (example: 1.05)"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:text="@{batch.targetSgFinal}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/startingPh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Starting pH level (example: 3.7)"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:text="@{batch.startingPh}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/startingTemp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="starting temperature"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:text="@{batch.startingTemp}" />

            </android.support.design.widget.TextInputLayout>


            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout_notes_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:id="@+id/textView_notes_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="Notes"
                    app:layout_constraintLeft_toLeftOf="@+id/notes"
                    app:layout_constraintRight_toRightOf="@+id/notes"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Notes" />

                <EditText
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:text="@{batch.notes}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_notes_label"
                    tools:text="Notes about the batch go here. Notes about the batch go here. Notes about the batch go here." />

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/button_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/save_batch" />


        </LinearLayout>
    </ScrollView>
</layout>