<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.batch.BatchListFragment">

    <data>
        <import type="java.util.List" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/batch_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/batch_card_view" />

        <!-- http://stackoverflow.com/a/30752754/940217 -->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/batches_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_alignWithParentIfMissing="false"
            android:layout_gravity="bottom|end"
            android:layout_margin="24dp"
            android:clickable="true"
            android:focusable="true"
            app:elevation="6dp"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_add_circle_black_24dp" />

    </android.support.design.widget.CoordinatorLayout>
</layout>